# zarr-cloud-native-format

./: .dockerignore  .gitignore  404.html  README.md  Taskfile.yml  UPSTREAM_ISSUE_titiler-eopf_sel-time.md  app-water-bodies-occurrence.cwl  codemeta.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build.yaml  docs.yaml  unit-tests.yaml
command-line-tools/crop/: Dockerfile  README.md  app.py  pyproject.toml
command-line-tools/crop/crop_tool/: __init__.py  app.py  cli.py  io.py  signing.py  writer.py
command-line-tools/crop/tests/: test_cli.py  test_io.py  test_signing.py
command-line-tools/norm_diff/: Dockerfile  README.md  app.py  pyproject.toml
command-line-tools/norm_diff/norm_diff_tool/: __init__.py  cli.py  compute.py  writer.py
command-line-tools/norm_diff/tests/: test_cli.py  test_compute.py
command-line-tools/occurrence/: .dockerignore  Dockerfile  app.py  pyproject.toml
command-line-tools/occurrence/occurrence/: app.py
command-line-tools/otsu/: Dockerfile  README.md  app.py  pyproject.toml
command-line-tools/otsu/otsu_tool/: __init__.py  cli.py  threshold.py  writer.py
command-line-tools/otsu/tests/: test_cli.py  test_threshold.py
command-line-tools/stac-collection/: .dockerignore  Dockerfile  app.py  pyproject.toml
command-line-tools/stac-collection/stac_collection/: app.py  cli.py  contract.py  writer.py
command-line-tools/stac-collection/tests/: test_app.py
command-line-tools/stac-eopf-product/: Dockerfile  README.md  app.py  cf_extension.py  pyproject.toml
command-line-tools/stac-eopf-product/stac_eopf_product/: app.py  cli.py  contract.py  metadata.py  writer.py
command-line-tools/stac-eopf-product/tests/: test_eopf_product.py
command-line-tools/stac-zarr/: .dockerignore  Dockerfile  app.py  pyproject.toml
command-line-tools/stac-zarr/stac_zarr/: app.py  cf.py  cli.py  constants.py  contract.py  multiscales.py  reducers.py  writer.py
command-line-tools/stac-zarr/stac_zarr/models/: __init__.py  base.py  common.py  conventions.py  multiscales.py  spatial.py
command-line-tools/stac-zarr/tests/: test_app.py
compliance/geozarr-minispec-compliance/: index.html
compliance/stac-zarr-best-practices/: index.html
containers/yq/: Dockerfile  dockerfile
cwl-cli/convert-search/: index.html
cwl-cli/discovery/: index.html
cwl-cli/stac/: index.html
cwl-cli/stac-collection/: index.html
cwl-cli/stac-zarr/: index.html
cwl-tests/: .gitignore  README.md
cwl-tests/jobs/: producer-job-item.yml  producer-job.yml
cwl-tests/tests/: app-water-bodies-e2e.yml
cwl-workflow/: app-water-bodies-occurrence.cwl  app-water-bodies.cwl
cwl-workflows/consumer/: index.html
cwl-workflows/producer/: index.html
design/water-bodies/: index.html
docker/titiler-eopf-patched/: Dockerfile  patch_titiler_eopf.py
docs/: exploitation.ipynb  geozarr-minispec-compliance.md  helpers.py  index.md  input-stac.md  labs.md  onboarding.md  pratice-labs.md  producer-outputs.md  stac-zarr-best-practices.md  water-bodies.md
docs/compliance/: geozarr-minispec-compliance.md  stac-zarr-best-practices.md
docs/cwl-cli/: convert-search.ipynb  discovery.ipynb  stac-collection.ipynb  stac-zarr.ipynb  stac.ipynb
docs/cwl-workflows/: consumer.ipynb  downstream.ipynb  producer.ipynb
docs/design/: water-bodies.md
docs/examples/: produced-item.json
docs/how-to/: stac-produced-objects.md  stac-zarr-usage.md  titiler-eopf-collection.md  titiler-eopf-html-client.md  titiler-eopf-item.md  titiler-eopf-patch.md
docs/on-boarding/: developers.md  eoap-users.md  maintainers.md
docs/sub-workflow/: water-bodies-detection.ipynb
examples/: produced-collection.json  titiler-eopf-client.html
exploitation/: index.html
helpers/: index.html
how-to/stac-produced-objects/: index.html
how-to/stac-zarr-usage/: index.html
how-to/titiler-eopf-collection/: index.html
how-to/titiler-eopf-html-client/: index.html
how-to/titiler-eopf-item/: index.html
how-to/titiler-eopf-patch/: index.html
input-stac/: index.html
labs/: index.html
notebooks/: exploitation copy.ipynb  exploitation.ipynb  params.yaml  requirements.txt
on-boarding/developers/: index.html
on-boarding/eoap-users/: index.html
on-boarding/maintainers/: index.html
practice-labs/1-CWL-CommandLineTools/: 1-Discovery.ipynb  2-Convert-search.ipynb  3-Water-bodies-detection.ipynb  4-STAC-Catalog.ipynb  5-STAC-Zarr.ipynb  6-STAC-Zarr-eopf.ipynb
practice-labs/2-Producer-CWL-Workflow/: 1-Producer.ipynb
practice-labs/3-Exploitation/: 1-Exploitation.ipynb
practice-labs/4-Consumer-CWL-Workflow/: 1-Consumer.ipynb
practice-labs/4-Downstream/: 1-Downstream-app-package.ipynb
pratice-labs/: index.html
producer-outputs/: index.html
scripts/: validate_eopf_explorer_profile.py  validate_geo_proj_schema.py  validate_multiscales_layout_profile.py  validate_multiscales_schema.py  validate_multiscales_tms_profile.py  validate_spatial_schema.py
search/: search_index.json
stac-zarr-best-practices/: index.html
sub-workflow/water-bodies-detection/: index.html
